# llm_execution_time_predictor

./: .dockerignore  .gdvc_config.json  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  batch_benchmark_runner.py  batch_composition_results.jsonl  bench_backend_handler.py  bench_profile_config_list_sandbox.py  benchmark_data_Qwen_Qwen3-4B.json  benchmark_data_Qwen_Qwen3-4B_TP_1_PP_1.json  execution_time_prediction.ipynb  final_benchmark_verification.py  llm_forward_predictor_cli.py  llm_predictor_viewer.py  profile_output_a100.dvc  pyproject.toml  quick_composition_test.py  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  result.jsonl  sglang_batch_latency.py  simple_comparison_test.py  test_sweep_vs_individual.py  train.ipynb  vllm_batch_latency.py
.dvc/: config
benchmark_cache/: results_00cf68676d2b0f09a60a818e0923e8ba.json
llm_execution_time_predictor/: __init__.py  args.py  batch_benchmark_runner.py  bench_backend_handler.py  bench_utils.py  llm_forward_predictor_cli.py  llm_predictor_viewer.py  prefill_decode_isolated_profiler.py  profiling_utils.py  sandbox_runner.py  sglang_batch_latency.py  train_utils.py
llm_execution_time_predictor/monkey_patch_sglang/: run_splitwise_file.py  test_monkey_patch.py  working_profiler.py
monkey_patch_sglang/: README.md  load_splitwise_file.py  test_working.py  working_profiler.py
tests/: test_basic_training_pipeline.py
